--- a/app/src/main/res/layout/list_item_album_compact.xml
+++ b/app/src/main/res/layout/list_item_album_compact.xml
@@ -1,18 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
+	style="@style/Card"
 	android:layout_width="@dimen/square_compact_width"
-	android:layout_height="wrap_content"
-	android:layout_marginLeft="6dp"
-	android:layout_marginRight="6dp"
-	android:layout_marginTop="6dp"
-	android:layout_marginBottom="6dp"
-	android:background="@drawable/bg_card"
-	android:paddingBottom="10dp"
-	android:paddingLeft="0dp"
-	android:paddingTop="0dp"
-	android:paddingRight="0dp">
+	android:layout_height="wrap_content" >
 
 	<RelativeLayout
 		android:id="@+id/thumb_wrapper"
@@ -27,7 +19,7 @@
 			android:layout_alignParentTop="true"
 			android:adjustViewBounds="true"
 			android:scaleType="centerCrop"
-			android:contentDescription="Poster" />
+			android:contentDescription="@string/poster" />
 
 	</RelativeLayout>
 
@@ -45,7 +37,8 @@
 		android:textSize="14sp"
 		android:fontFamily="sans-serif-light"
 		android:maxLines="1"
-		android:ellipsize="end" />
+		android:ellipsize="end"
+		tools:ignore="HardcodedText"/>
 
 	<TextView
 		android:text="title_artist"
@@ -61,6 +54,7 @@
 		android:textSize="14sp"
 		android:fontFamily="sans-serif-light"
 		android:maxLines="1"
-		android:ellipsize="end"/>
+		android:ellipsize="end"
+		tools:ignore="HardcodedText"/>
 
 </RelativeLayout>
