--- a/app/src/main/res/layout/list_item_movie_wide.xml
+++ b/app/src/main/res/layout/list_item_movie_wide.xml
@@ -1,15 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
 <org.xbmc.android.app.ui.view.CardView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
+	style="@style/Card"
 	android:layout_width="match_parent"
-	android:layout_height="wrap_content"
-	android:layout_margin="6dp"
-	android:background="@drawable/bg_card"
-	android:paddingBottom="2dp"
-	android:paddingLeft="0dp"
-	android:paddingTop="0dp"
-	android:paddingRight="0dp">
+	android:layout_height="wrap_content">
 
 	<RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent" >
 
