--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -38,6 +38,15 @@
 		<item name="android:fontFamily" tools:ignore="NewApi">sans-serif-light</item>
 	</style>
 
+	<style name="Card">
+		<item name="android:layout_margin">6dp</item>
+		<item name="android:background">@drawable/bg_card</item>
+		<item name="android:paddingBottom">2dp</item>
+		<item name="android:paddingLeft">0dp</item>
+		<item name="android:paddingTop">0dp</item>
+		<item name="android:paddingRight">0dp</item>
+	</style>
+
 	<style name="Header">
 		<item name="android:fontFamily" tools:ignore="NewApi">sans-serif-light</item>
 	</style>
