--- a/app/src/main/res/drawable/bg_box.xml
+++ b/app/src/main/res/drawable/bg_box.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
+	<stroke android:width="2dip" android:color="@color/light_bg"/>
+</shape>
