Added landscape layout for movie details view.

--- a/app/src/main/res/values-land/dimens.xml
+++ b/app/src/main/res/values-land/dimens.xml
@@ -26,4 +26,8 @@
 
 	<dimen name="swipe_notice_top_margin">64dp</dimen>
 
+	<!-- Movie Details -->
+	<dimen name="portrait_details_width">168dp</dimen>
+	<dimen name="portrait_details_height">249dp</dimen>
+
 </resources>
