--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -29,6 +29,8 @@
 
 	<!-- Cards -->
 	<dimen name="square_compact_width">115dp</dimen>
+	<dimen name="square_wide_width">64dp</dimen>
+
 	<dimen name="portrait_compact_width">115dp</dimen>
 	<dimen name="portrait_compact_height">170dp</dimen>
 	<dimen name="portrait_wide_width">80dp</dimen>
